Fix map title and container alignment

--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -19,6 +19,10 @@
   width: 100%;
 }
 
+.subsection {
+  flex: 1;
+}
+
 .box,
 .statBox {
   flex: 1;
@@ -27,6 +31,7 @@
 
 .section-items {
   display: flex;
+  justify-content: space-between;
 }
 
 .statBox {
